# StrinovaBot

./: .gitignore  .gitmodules  README.md  achievements.py  asset_utils.py  audio.py  bwiki_downloader.py  char_infobox.py  char_page.py  global_config.py  main.py  pyproject.toml  requirements.txt  strinova_comms.py  uploader.py  user-config.py  utils.py  weapons.py  wiki_utils.py
audio/: README.md  audio.py  audio_exporter.py  audio_gen.py  audio_main.py  audio_parser.py  audio_test.py  audio_uploader.py  audio_utils.py  character_page.py  conversion_table.py  machine_assist.py  make_character_page.py  pull_from_miraheze.py  voice.py
audio/audio_export/: audio.py  audio_exporter.py  (+1 more)
char_info/: achievement.py  char_infobox.py  character_selector.py  dorm.py  emote.py  gallery.py  skills.py  story.py  weapons.py
page_generator/: achievements.py  badges.py  battle_pass.py  chat_bubbles.py  clan.py  decal.py  events.py  gacha_drop.py  guides.py  id_card.py  interactive_props.py  items.py  maps.py  settings.py  shop.py  strinova_comms.py  translations.py  weapons.py
scripts/: battle_pass.py  event_page.py  gallery_compare.py  hash_test.py  make_language_variants.py  mmd_models.py  ocr.py  outbreak.py  ranks.py  rename_images.py  shop.py  shop_daily_picks.py
story/: event_story.py  story_main.py  story_parser.py  story_preprocessor.py
utils/: asset_utils.py  bwiki_downloader.py  dict_utils.py  file_utils.py  general_utils.py  json_utils.py  lang.py  lang_utils.py  routine_script.py  string_utils.py  upload_utils.py  uploader.py  wiki_utils.py  wtp_utils.py
