[project]
name = "strinovabot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pywikibot>=10.7.6",
    "requests>=2.32.5",
    "wikitextparser>=0.56.4",
]

[project.optional-dependencies]
audio = [
    "fastdtw>=0.3.4",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "scipy>=1.16.1",
]
audio-whisper = [
    "openai-whisper>=20250625",
]

